--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,6 @@
     <string name="version_update">检查更新</string>
 
     <string name="data_cleared">已清除缓存数据</string>
-    <string name="my_team">我的主队</string>
+    <string name="my_team">呵呵</string>
 
 </resources>
