--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NBAPlus</string>
+    <string name="app_name">NBA资讯</string>
 
     <string name="firstTab">精选</string>
     <string name="secondTab">推荐</string>
@@ -34,9 +34,9 @@
 
     <string name="about_app_name_with_introduce">NBAPlus - 最专注的NBA信息平台</string>
     <string name="about_introduce">介绍</string>
-    <string name="introduce">NBAPlus 是一款专注于NBA新闻和动态的平台 \n\n更全面、更方便、更快捷是的获取NBA资讯\n\n所有资讯均来自互联网，如有侵权，请告知！</string>
+    <string name="introduce">本软件是一款专注于NBA新闻和动态的移动平台 \n\n更全面、更方便、更快捷是的获取NBA资讯\n\n所有资讯均来自互联网 </string>
     <string name="contact_to_me">联系</string>
-    <string name="email">silencedutchman@foxmail.com</string>
+    <string name="email">zhuchudong@gmail.com.com</string>
     <string name="notices">开源协议</string>
     <string name="open_source">开放源代码许可</string>
 
